in componentes--left-aside--developer-console, now the console always takes up all the space available, it was added an auto history feature to the console, it was added a min-height to the left-aside content for avoiding to loose the content out of the viewport when resizing

--- a/public/components/left-aside/l-aside.css
+++ b/public/components/left-aside/l-aside.css
@@ -45,7 +45,7 @@
     display: flex;
     position: relative;
     height: 100%;
-    flex-basis: calc(100% - 7px);
+    width: calc(100% - 7px);
     background: var(--dark3);
     transition: flex .3s ease;
     flex-wrap: wrap;
@@ -54,18 +54,25 @@
     height: 35%;
     width: 100%;
     min-height: 40px;
+    z-index: 0;
+    position: relative;
 }
 .l-aside__body > .developer-console > .header {
     height: 20px;
     width: 100%;
     display: flex;
-    background: var(--dark3);
     background: var(--dark4);
     box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
+    position: relative;
+    overflow-x: hidden;
+    justify-content: flex-start;
 }
 .developer-console__button {
-    flex-basis: 20px;
-    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 20px;
+    height: 20px;
     display: flex;
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
     box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
@@ -81,14 +88,54 @@
 .developer-console__section {
     flex-basis: calc(100% - 20px);
     height: 100%;
+    transform: translateX(20px);
 }
 .l-aside__body > .developer-console > .body {
     height: calc(100% - 20px);
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+}
+.l-aside__body > .developer-console > .body:hover {
+    overflow: auto;
+}
+.l-aside__body > .developer-console > .body > textarea {
+    resize: none;
+    height: auto;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    border: none;
+    display: block;
+    overflow: hidden;
+    outline: none;
+    background: none;
+    font-weight: 800;
+    font-family: monospace;
+    color: #FFF;
+    font-size: 14px;
+    box-sizing: content-box;
+}
+.developer-console > .body > .records {
+    height: auto;
+    flex-direction: column;
+    width: 100%;
+    font-weight: 800;
+    font-family: monospace;
+    color: var(--white2);
+    font-size: 14px;
+    position: relative;
+}
+.developer-console > .body > .records > .record {
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    height: auto;
     width: 100%;
 }
 .l-aside__body > .content {
     height: 65%;
     width: 100%;
+    min-height: 33.16px;
 }
 .l-aside__body > .content > .resize-bar {
     height: 4px;
