--- a/public/utils/shared.css
+++ b/public/utils/shared.css
@@ -42,3 +42,15 @@ input {
     margin: 0;
     padding: 0;
 }
+button {
+    all: unset;
+}
+body {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 40px 1fr;
+    grid-template-areas:
+        "header"
+        "container";
+    height: 100vh;
+}
